<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="fill_parent" android:layout_width="fill_parent" android:visibility="visible" android:orientation="vertical">










<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_ad_00" android:textSize="20dp" android:layout_marginTop="20dp"></TextView>
<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="20dp" android:text="@string/main_ad_01"></TextView>
<Button android:layout_height="wrap_content" android:text="@string/main_ad_install" android:layout_width="fill_parent" android:layout_marginLeft="30dp" android:layout_marginRight="30dp" android:id="@+id/main_ad_installbutton"></Button>
</LinearLayout>
